# tensorflow-lite-cpp

./: README.md
src/: CMakeLists.txt
